--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 	<link rel="stylesheet" href="sass/style.css">
 </head>
 <body>
 	<div class="container">
+		<h1><strong>Gra:</strong> "Kamień Papier Nożyce".</h1>
 		<div id="buttons">
-			<button id="play-rock">Kamień</button>
-			<button id="play-paper">Papier</button>
-			<button id="play-scissors">Nożyce</button>
+			<button id="play-rock"><i class="fa-regular fa-hand-back-fist"></i></button>
+			<button id="play-paper"><i class="fa-regular fa-hand"></i></button>
+			<button id="play-scissors"><i class="fa-regular fa-hand-scissors"></i></button>
 		</div>
 		<div id="messages"></div>
 	</div>
