Fix code(scope in js.script.js, semantic in index.html)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<div class="container">
 		<h1><strong>Gra:</strong> "Kamień Papier Nożyce".</h1>
 		<div id="buttons">
-			<button id="play-rock"><i class="fa-regular fa-hand-back-fist"></i></button>
-			<button id="play-paper"><i class="fa-regular fa-hand"></i></button>
-			<button id="play-scissors"><i class="fa-regular fa-hand-scissors"></i></button>
+			<button id="play-rock" type="button"><i class="fa-regular fa-hand-back-fist"></i></button>
+			<button id="play-paper" type="button"><i class="fa-regular fa-hand"></i></button>
+			<button id="play-scissors" type="button"><i class="fa-regular fa-hand-scissors"></i></button>
 		</div>
 		<div id="messages"></div>
 	</div>
